# test-rpg

./: .dockerignore  .gitignore  Dockerfile  README.MD  conftest.py  docker-compose.yaml  entrypoint.sh  example.env  pyproject.toml  pytest.ini
config/: asgi.py  urls.py
config/settings/: base.py  development.py  local.py  remote.py
config/settings/extension/: __init__.py
core/bookings/: filters.py  models.py  serializers.py  urls.py  views.py
core/bookings/migrations/: 0001_initial.py  0002_alter_bookingevent_timestamp.py  0003_alter_bookingevent_options.py
core/bookings/tests/: test_api.py
core/hotels/: models.py  serializers.py  urls.py  views.py
core/hotels/management/commands/: create_fixtures.py
core/hotels/migrations/: 0001_initial.py
core/hotels/tests/: test_events.py
core/rooms/: apps.py  models.py  serializers.py
core/rooms/migrations/: 0001_initial.py
dashboard_app/: .dockerignore  Dockerfile  clients.py  config.py  example.env  fast_test_main.py  logs.py  main.py  process.py  pyproject.toml  pytest.ini  validator.py
proc/: supervisor.conf
