[tool.poetry]
name = "dashboard-app"
version = "0.1.0"
description = ""
authors = ["flyingdutchman <ribonred@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
aiohttp = "^3.8.5"
pydantic-settings = "^2.0.2"
pandas = "^2.0.3"
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
